2004-09-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: epiphany has been branched.

2004-09-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-games has been branched.

2004-09-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: zenity has been branched.

2004-09-12  Abel Cheung  <maddog@linuxhall.org>

	* translation-status.xml: (Hopefully) Fix evolution-exchange pot name.

2004-09-06  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Use "gnome-2-6" for gnomemeeting for
	Gnome 2.8 as well (not just for Gnome 2.6).

2004-09-05  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: drivel has been branched.

2004-09-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed gnomemeeting branch to gnome-2-6,
	as the maintainer now says it's that branch we should use.

2004-09-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed gnomemeeting back to gnome_2_4.

2004-09-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed gnumeric back to HEAD.

2004-08-31  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed evolution and evolution-exchange
	pot file names.

2004-08-31  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnopernicus has been branched.

2004-08-30  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: evolution-exchange has been branched.

2004-08-30  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed the planner branch back
	to HEAD.

2004-08-28  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gal, gtkhtml, evolution-data-server
	and evolution have been branched.

2004-08-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added NetworkManager to extras.

2004-08-25  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added netapplet to extras.
