@@ -434,7 +434,7 @@
       <component name="evolution-webcal" dir="evolution-webcal" group="desktop">
 	<podir dir="po"/>
 	<potname name="evolution-webcal.pot"/>
-	<branch name="HEAD"/>
+	<branch name="gnome-2-8"/>
 	<regenerate/>
 	<download/>
       </component>
@@ -1073,7 +1073,7 @@
       <component name="gnome-icon-theme" dir="gnome-icon-theme" group="desktop">
 	<podir dir="po"/>
 	<potname name="gnome-icon-theme.pot"/>
-	<branch name="HEAD"/>
+	<branch name="gnome-2-8"/>
 	<regenerate/>
 	<download/>
       </component>
@@ -1469,7 +1469,7 @@
       <component name="gnome-volume-manager" dir="gnome-volume-manager" group="desktop">
 	<podir dir="po"/>
 	<potname name="gnome-volume-manager.pot"/>
-	<branch name="HEAD"/>
+	<branch name="gnome-2-8"/>
 	<regenerate/>
 	<download/>
       </component>
