@@ -1,5 +1,10 @@
 2004-09-13  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: gnome-icon-theme, evolution-webcal, and
+	gnome-volume-manager have been branched.
+
+2004-09-13  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: epiphany has been branched.
 
 2004-09-13  Christian Rose  <menthos@menthos.com>
